fix visual glitch in dark mode

--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -6,3 +6,14 @@
     border-bottom: 4px solid;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .menu {
+    .nav-link {
+      border-bottom: 4px solid #222;
+    }
+    .active {
+      border-bottom: 4px solid;
+    }
+  }
+}
